group = rootProject.group
version = rootProject.version

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        allowInsecureProtocol = true
        url "http://localhost:31647/snapshots"
    }
}

dependencies {
    compileOnly 'org.spigotmc:spigot:1.16.5-R0.1-SNAPSHOT'
    compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'

    compileOnly 'org.projectlombok:lombok:1.18.28'
    annotationProcessor 'org.projectlombok:lombok:1.18.28'
}

kotlin {
    jvmToolchain(8)
}

java {
    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
}